Rewrite filter algorithm to properly support filtering with expanded folders under Detail View mode.

BUG: 411878
CCBUG: 442275
FIXED-IN: 21.12